<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/dustyRose">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/booking"
            android:textColor="@color/white"
            android:gravity="center">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Available_Slot_Label"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:id="@+id/SessionLabel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/noOfSession_Label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/numberOfSession"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:digits="123456789"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/defaultSlotNumber"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center">

            <Button
                android:id="@+id/addToCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_to_Cart"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@color/red"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>