<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.05">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/dustyRose"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/paymentDetail">
    </TextView>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <ImageView
            android:id="@+id/activityImage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
        <TextView
            android:id="@+id/receiptView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center|center_vertical"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <TextView
            android:id="@+id/discountLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="320sp"
            android:layout_marginEnd="17sp"
            android:layout_marginRight="17sp"
            android:gravity="start"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/PROCEED"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/PROCEED" />
    </LinearLayout>

</LinearLayout>