<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/xercise1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@color/dustyRose">
            <TextView
                android:id="@+id/programme"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/programme"
                android:gravity="center"
                android:text="@string/programme"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05">

        </LinearLayout>

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.8">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.6">

                                        <ImageButton
                                            android:id="@+id/Pool"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/white"
                                            android:scaleType="fitCenter"
                                            android:src="@drawable/pool"></ImageButton>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.3">
                                                <TextView
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:layout_alignParentBottom = "true"
                                                    android:text="@string/Pool"
                                                    android:textAlignment="center"
                                                    android:textSize="25sp"
                                                    android:gravity="center_horizontal">

                                                </TextView>
                                    </LinearLayout>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.2">

                                </LinearLayout>

                                    <LinearLayout
                                        android:orientation="vertical"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.8">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.6">
                                            <ImageButton
                                                android:id="@+id/Tennis"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:scaleType="fitCenter"
                                                android:background="@color/white"
                                                android:src="@drawable/tennis" >
                                            </ImageButton>
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.3">
                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_alignParentBottom = "true"
                                                android:text="@string/Tennis"
                                                android:textAlignment="center"
                                                android:textSize="25sp"
                                                android:gravity="center_horizontal">

                                            </TextView>
                                        </LinearLayout>

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.2">

                                    </LinearLayout>

                                    <LinearLayout
                                        android:orientation="vertical"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.8">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.6">
                                            <ImageButton
                                                android:id="@+id/Squash"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:scaleType="fitCenter"
                                                android:background="@color/white"
                                                android:src="@drawable/squash" >
                                            </ImageButton>
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.3">
                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_alignParentBottom = "true"
                                                android:text="@string/Squash"
                                                android:textAlignment="center"
                                                android:textSize="25sp"
                                                android:gravity="center_horizontal">

                                            </TextView>
                                        </LinearLayout>

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.2">

                                    </LinearLayout>

                                    <LinearLayout
                                        android:orientation="vertical"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.8">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.6">
                                            <ImageButton
                                                android:id="@+id/Yoga"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:scaleType="fitCenter"
                                                android:background="@color/white"
                                                android:src="@drawable/yoga" >
                                            </ImageButton>
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.4">
                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_alignParentBottom = "true"
                                                android:text="@string/Yoga"
                                                android:textAlignment="center"
                                                android:textSize="25sp"
                                                android:gravity="center_horizontal">

                                            </TextView>
                                        </LinearLayout>

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.2">

                                    </LinearLayout>


                                    <LinearLayout
                                        android:orientation="vertical"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.8">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.6">
                                            <ImageButton
                                                android:id="@+id/Functional"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:scaleType="fitCenter"
                                                android:background="@color/white"
                                                android:src="@drawable/func" >
                                            </ImageButton>
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="0.3">
                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_alignParentBottom = "true"
                                                android:text="@string/Func"
                                                android:textAlignment="center"
                                                android:textSize="25sp"
                                                android:gravity="center_horizontal">

                                            </TextView>
                                        </LinearLayout>

                                    </LinearLayout>


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="0.05">

                                    </LinearLayout>
</LinearLayout>

